--- a/Pipfile
+++ b/Pipfile
@@ -8,14 +8,19 @@ name = "pypi"
 [packages]
 
 flask = "*"
+ariadne = "*"
 marshmallow = "*"
 pytest = "*"
 requests = "*"
 PyJWT= "1.6.4"
-Flask-Mail = '*'
-flask-restful = '*'
-flask-apispec = '*'
-Flask-SQLAlchemy = '*'
+Flask-Mail = "*"
+flask-restful = "*"
+flask-apispec = "*"
+Flask-SQLAlchemy = "*"
+flask-cors = "*"
+
+
+
 
 [dev-packages]
 
